gclb-work.d/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  #namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: web
  type: NodePort
