gclb-work.d/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
    networking.gke.io/managed-certificates: "demo"
# Easy way
#spec:
#  backend:
#    serviceName: web
#    servicePort: 8080

# More specified
spec:
  rules:
  - host: bigleta.shermandemo.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: web
          servicePort: 8080
